# snappy_10_tets

./: README.rst  pyproject.toml  setup.py  test.ipynb
manifold_src/: make_sqlite_db.ipynb  make_sqlite_db.py
python_src/: __init__.py  database.py
ten_tet_census/: __init__.py  database.py
